--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1>Blog de soutien à Patrick Balkany</h1>
         <h3>Et autres informations sur sa personne...</h3>
-        <img src="Images\Patrick-Balkany.jpg" alt:"le beau patrick :)" id="patrickAccueil">
+        <img src="Images\ecolo_nobg.gif" alt:"ppanimgif" id="patrickAccueil">
 
         <h2>Pourquoi ce site?</h2>
         <p>Comme nous le savons tous, notre Héros national qu'est Patrick Balkany vit actuellement des heures sombres à la prison de la santé.</p>
