--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Patoche <3</title>
+    <title>Qinmaoo~</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
@@ -21,7 +21,7 @@
 
         <h1>Blog de soutien à Patrick Balkany</h1>
         <h3>Et autres informations sur sa personne...</h3>
-        <img src="Images\ecolo_nobg.gif" alt:"ppanimgif">
+        <img src="Images\pp_gif.gif" alt:"ppanimgif">
 
         <h2>Pourquoi ce site?</h2>
         <p>Comme nous le savons tous, notre Héros national qu'est Patrick Balkany vit actuellement des heures sombres à la prison de la santé.</p>
@@ -45,6 +45,6 @@
 
         <h2>Et surtout...</h2>
         <p>N'hésitez pas à tweeter avec le hashtag <a href="https://twitter.com" class="lientwit" target="_blank">#FreePatoche</a> afin de faire connaitre notre cause au grand public! Ou bien allez nous suivre sur Twitter: <a href="https://twitter.com/pagebalkany" class="lientwit" target="_blank">@PageBalkany</a></p>
-        <a href="accueil.html" class="lien">Haut de page</a>
+        <a href="index.html" class="lien">Haut de page</a>
     </div>
 </body>
