--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1>Blog de soutien à Patrick Balkany</h1>
         <h3>Et autres informations sur sa personne...</h3>
-        <img src="Images\pp_gif.gif" alt:"ppanimgif">
+        <img src="Images\pp_gif_loop.gif" alt:"ppanimgif">
 
         <h2>Pourquoi ce site?</h2>
         <p>Comme nous le savons tous, notre Héros national qu'est Patrick Balkany vit actuellement des heures sombres à la prison de la santé.</p>
